# ReadmeGenerator

./: .env.egample  .gitignore  README.md  main.py  pyproject.toml
config/: prompts.py  settings.py
models/: project.py
services/: ai_service.py  file_service.py  git_service.py  project_service.py
utils/: command_runner.py
