[project]
name = "readmegenerator"
version = "0.1.0"
description = ""
authors = [
    {name = "Krzysztof Kokot",email = "krzysiukokot@interia.pl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "typing-extensions (>=4.0.0,<5.0.0)",
    "tomli (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
